Reduced image size + Updated contents

--- a/templates/realanalysis.html
+++ b/templates/realanalysis.html
@@ -3,6 +3,17 @@
 
 <head>
  {% include 'head.html' %}
+<script type="text/javascript">
+  window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']]
+  }
+};
+</script>
+
+
+
+
  <title>FOSSEE Animations | Real Analysis</title>
 </head>
 
