--- a/templates/head.html
+++ b/templates/head.html
@@ -5,6 +5,7 @@
 
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>-->
+ <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='web-files/img/favicon.ico')  }}"/>
 
 <script type="text/javascript" src="{{ url_for('static', filename='web-files/javascript/bootstrap.bundle.min.js')  }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='web-files/javascript/jquery.min.js')  }}"></script>
@@ -12,6 +13,15 @@
 
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&display=swap" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+
+<script type="text/javascript">
+  window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']]
+  }
+};
+</script>
+
 
   <style> 
     .serif {
